# diagramahub

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  docker-compose.yml  install.py  install.sh  test-api.sh  test-onboarding-wizard.sh  test-onboarding.sh  verify-installation.sh
backend/: .env.example  .env.template  Dockerfile  README.md  pyproject.toml  pytest.ini  run-tests.sh
backend/app/: __init__.py  main.py
backend/app/api/v1/ai_providers/: __init__.py  interfaces.py  repository.py  routes.py  schemas.py  services.py
backend/app/api/v1/ai_providers/clients/: __init__.py  base.py  factory.py  gemini_client.py  openai_client.py
backend/app/api/v1/diagrams/: __init__.py  interfaces.py  repository.py  routes.py  schemas.py  services.py
backend/app/api/v1/folders/: __init__.py  interfaces.py  repository.py  routes.py  schemas.py  services.py
backend/app/api/v1/projects/: __init__.py  interfaces.py  repository.py  routes.py  schemas.py  services.py
backend/app/api/v1/users/: __init__.py  interfaces.py  repository.py  routes.py  schemas.py  services.py
backend/app/core/: config.py  security.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/v1/diagrams/: test_schemas.py
backend/tests/api/v1/users/: __init__.py  test_auth.py  test_password_management.py
deploy/: README.md
deploy/external-mongodb/: README.md  docker-compose.yml
deploy/local-full/: README.md  docker-compose.yml
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AIIntegrationsSection.tsx  AddProviderModal.tsx  CodeEditor.tsx  ConfirmModal.tsx  CreateDiagramWithAIModal.tsx  CreateProjectModal.tsx  DeleteFolderModal.tsx  ImproveDiagramWithAIModal.tsx  InstallationGuard.tsx  (+7 more)
(+16 files in other folders)
